# working-map2

newmap/build-newmap-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt  appnewmap  appnewmap_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
newmap/build-newmap-Desktop_Qt_6_5_1_GCC_64bit-Debug/appnewmap_autogen/: deps
newmap/build-newmap-Desktop_Qt_6_5_1_GCC_64bit-Debug/newmap/: appnewmap_qml_module_dir_map.qrc  main.qml  mapbuild.html  new.qrc  qmldir  resource.qrc
newmap/build-newmap-Desktop_Qt_6_5_1_GCC_64bit-Debug/qmltypes/: appnewmap_foreign_types.txt
newmap/newmap/: CMakeLists.txt  components.qml  main.cpp  mapbuild1.html
